--- a/client/src/index.css
+++ b/client/src/index.css
@@ -260,6 +260,15 @@ tr {
   flex-flow: column nowrap;
   gap: 0.75em;
   max-width: 1000px;
+
+}
+.formMsg {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-end;
+  gap: 0.75em;
+  width: 80%;
+  align-items: center;
 }
 
 .form__checkbox-container {
@@ -278,7 +287,7 @@ tr {
 
 .form__title-row {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
